--- a/index.html
+++ b/index.html
@@ -16,13 +16,17 @@
 
 </head>
 <body>
+    <img src="/src/assets/imagem/celular.png" alt="" class="celular">
+
+    <img src="/src/assets/imagem/cam.png" alt="" class="cam">
+
     <main class="box">
-        <img src="src/assets/imagem/1 - As you.jpg" alt="As you Fade away">
+        <img src="src/assets/imagem/1 - As you.jpg" alt="As you Fade away" id="img_player">
         <div class="descricao">
             <h2>As you Fade away</h2>
             <i>NEFFEX</i>
         </div>
-    
+
         <div class="duracao">
             <div class="barra">
                 <progress value="0" max="1"></progress>
@@ -33,7 +37,7 @@
                 <p class="fim">3:40</p>
             </div>
         </div>
-    
+
         <div class="player">
             <img src="src/assets/imagem/Previous.png" alt="" class="tamanho seta anterior">
 
