--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 </head>
 <body>
-    <img src="/src/assets/imagem/celular.png" alt="" class="celular">
+    <img src="src/assets/imagem/celular.png" alt="" class="celular">
 
-    <img src="/src/assets/imagem/cam.png" alt="" class="cam">
+    <img src="src/assets/imagem/cam.png" alt="" class="cam">
 
     <main class="box">
         <img src="src/assets/imagem/1 - As you.jpg" alt="As you Fade away" id="img_player">
